# HK-Campaign-Air-Pollution-and-Shark-Finning

./: README.md  about.md  air_aqi.txt  api.py  main.py  package-lock.json  pyproject.toml  waqi_response.json
HK-Campaign-Air-Pollution-and-Shark-Finning/: setup.py
HK-Campaign-Air-Pollution-and-Shark-Finning/HK-Campaign-Air-Pollution-and-Shark-Finning/: __init__.py  api.py  views.py
HK-Campaign-Air-Pollution-and-Shark-Finning/HK-Campaign-Air-Pollution-and-Shark-Finning/templates/: air_pollution.html  games.html  home.html
static/: Level_2.json
templates/: 404.html  air_pollution.html  aqi_stats.html  games.html  home.html  petition.html  shark_finning.html
