[tool.poetry]
name = "hk-campaign-air-pollution-and-shark-finning"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
aiohttp = "^3.7.4"
Flask-Script = "^2.0.6"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
